--- a/frontend/src/app/player/player/player.component.scss
+++ b/frontend/src/app/player/player/player.component.scss
@@ -58,9 +58,15 @@ $player_height: 12vh;
 		height: 90%;
 		grid-area: song-infos;
 
-		img {
-			height: 90%;
-			margin-right: 10px;
+		a {
+			height: 100%;
+			color: white;
+			text-decoration: none;
+			
+			img {
+				height: 100%;
+				margin-right: 10px;
+			}
 		}
 
 		h2 {
