added album link in song component

--- a/frontend/src/app/album-page/components/album-page/album-page.component.scss
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.scss
@@ -131,7 +131,7 @@
             }
 
             .list-style1 {
-                overflow-x: scroll;
+                overflow-x: auto;
                 display: flex;
                 flex-direction: row;
                 gap: 10px;
