--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,9 +5,8 @@
 	<!--Affiche la bonne page-->
 	<div class="main">
 		<router-outlet></router-outlet>
-		<app-arrows-nav class="arrows-nav"></app-arrows-nav>
+		<app-overlay-header></app-overlay-header>
 	</div>
-
 	<!--Player component-->
 	<app-player #player class="player"></app-player>
 </div>
