changed back loggedin to standard boolean

--- a/frontend/src/app/components/info-login/info-login.component.html
+++ b/frontend/src/app/components/info-login/info-login.component.html
@@ -1,4 +1,4 @@
 <div class="info-login">
-    <a *ngIf="isLogged" routerLink="/artist/{{this.idUser}}"> {{username}} </a>
-    <a *ngIf="!isLogged" routerLink="/login"> Login </a>
+    <a *ngIf="authService.loggedIn" routerLink="/artist/{{this.authService.currentUserID}}"> {{this.authService.currentUserUsername}} </a>
+    <a *ngIf="!authService.loggedIn" routerLink="/login"> Login </a>
 </div>
