--- a/frontend/src/app/upload/components/upload-page/upload-page.component.html
+++ b/frontend/src/app/upload/components/upload-page/upload-page.component.html
@@ -4,7 +4,7 @@
         <div class="upload-header-cover">
             <input type="file" id="album-cover" accept="image/*" (change)="onFileSelected($event)">
             <label for="album-cover">
-                <img src="../../../assets/image-placeholder.png" alt="Album Cover">
+                <img [src]="this.imagePreviewSrc" alt="Album Cover">
             </label>
         </div>
         <div class="upload-header-title">
