added audio preview on song upload

--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
@@ -6,7 +6,7 @@
 
 .song-upload-card {
     display: grid;
-    grid-template-columns: 0.5fr 0.4fr 0.1fr;
+    grid-template-columns: 0.5fr 0.4fr 0.5fr 0.1fr;
 
     width: 100%;
     padding: 10px;
