--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.html
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.html
@@ -5,6 +5,11 @@
     <div class="song-tag">
         <span *ngFor="let tag of song.tags">{{tag}}</span>
     </div>
+
+    <!--Audio preview-->
+    <audio controls>
+        <source [src]="songUrl" type="audio/mpeg">
+    </audio>
     
     <!--Delete icon-->
     <div class="delete-icon-container">
