--- a/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.scss
@@ -36,6 +36,9 @@
         }
 
         button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             background: transparent;
             border: none;
             height: 100%;
