--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.html
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.html
@@ -2,7 +2,7 @@
     <h2 class="song-title">{{song.name}}</h2>
 
     <!--Song tags-->
-    <div class="song-tag">
+    <div class="song-tags">
         <span *ngFor="let tag of song.tags">{{tag}}</span>
     </div>
 
