--- a/frontend/src/app/components/overlay-header/overlay-header.component.scss
+++ b/frontend/src/app/components/overlay-header/overlay-header.component.scss
@@ -17,6 +17,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     padding: 10px;
+    padding-right: 20px;
 }
