--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
@@ -13,12 +13,15 @@
 
     border: solid 1px #333;
 
+
     .song-title {
+        display: flex;
+        align-items: center;
         color: white;
         font-size: 1.5em;
     }
 
-    .song-genre {
+    .song-tags {
         display: flex;
         align-items: center;
         
@@ -34,6 +37,9 @@
     }
 
     .delete-icon-container {
+        display: flex;
+        align-items: center;
+        
         img {
             height: 5vh;
             aspect-ratio: 1/1;
