--- a/frontend/src/app/utility/components/album/album.component.scss
+++ b/frontend/src/app/utility/components/album/album.component.scss
@@ -34,7 +34,9 @@ a {
             border-radius: 8px;
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
             cursor: pointer;
-        }    
+            aspect-ratio: 1/1;
+            object-fit: cover;
+        }   
     }
     
     .album-infos {
