--- a/frontend/src/app/utility/components/artist/artist.component.scss
+++ b/frontend/src/app/utility/components/artist/artist.component.scss
@@ -35,7 +35,7 @@ a {
             height: 200px;
             border-radius: 100%;
             box-shadow: 0px 0px 20px 0px black;
-
+            object-fit: cover;
             cursor: pointer;
         }    
     }
