--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
@@ -68,9 +68,14 @@
 				font-size: 1.2rem;
 				outline: none;
 				transition: all 0.2s ease-in-out;
+				cursor: pointer;
 		
 				&:hover {
 					background-color: #444;
+				}
+
+				&.btn-delete {
+					background-color: red;
 				}
 			}
 		}
