--- a/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card/upload-song-card.component.scss
@@ -24,6 +24,8 @@
     .song-tags {
         display: flex;
         align-items: center;
+
+        overflow-x: auto;
         
         gap: 10px;
         color: white;
