--- a/frontend/src/app/album-page/components/album-page/album-page.component.html
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.html
@@ -14,6 +14,10 @@
 		</div> 
 	</div>
 	<div class="more-of-song">
+		<div *ngIf="isLoggedInUserAlbum">
+			<button class="btn-delete" (click)="isDeleting = true;">Delete album</button>
+			<app-delete-pop-up [toDeleteType]="'Album'" [objectToDelete]="album" (delete)="handleDialogAnswer($event)" *ngIf="isDeleting"></app-delete-pop-up>
+		</div>
 		<div class="actions">
 			<button class="play-button" (click)="addAlbumToQueue()">
 				<img src="../../assets/play-icon-2.svg" alt="Play">
