Feat: Upgraded upload (year+desc)

--- a/frontend/src/app/upload/components/upload-page/upload-page.component.html
+++ b/frontend/src/app/upload/components/upload-page/upload-page.component.html
@@ -8,7 +8,10 @@
             </label>
         </div>
         <div class="upload-header-title">
-            <input type="text" id="album-name" placeholder="Album Name" formControlName="albumTitle">
+            <input type="text" id="album-name" placeholder="Album name" formControlName="albumTitle">
+            <input type="text" id="album-release" placeholder="2023" formControlName="albumReleaseYear">
+            <input type="text" id="album-desc" placeholder="Album short description" formControlName="albumDescription">
+
         </div>
     </div>
     <div class="upload-board">
