--- a/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.scss
+++ b/frontend/src/app/upload/components/upload-song-card-generator/upload-song-card-generator.component.scss
@@ -60,6 +60,17 @@
                     filter: invert(100%);
                 }
             }
+
+            &.uploaded {
+                label {
+                    img {
+                        filter: invert(50%);
+                    }
+                }
+            }
         }
+
     }
 }
+
+
