--- a/frontend/src/app/upload/components/upload-page/upload-page.component.scss
+++ b/frontend/src/app/upload/components/upload-page/upload-page.component.scss
@@ -20,6 +20,7 @@
         color: white;
         font-size: 4em;
         font-style: bold;
+        text-justify: center;
     }
 
     .upload-header {
@@ -32,6 +33,9 @@
 
         .upload-header-title {
             grid-area: title;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
 
             input {
                 width: 100%;
@@ -93,6 +97,5 @@
             }
         }
     }
-
-
 }
+
