--- a/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
+++ b/frontend/src/app/artist-page/components/artist-page/artist-page.component.scss
@@ -10,23 +10,74 @@
 	grid-template-rows: 0.2fr auto;
 	height: 100%;
 
+
+
 	.artist-infos {
 		margin-top: 200px;
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		padding: 10px;
 		gap: 10px;
-		align-items: flex-start;
-		img.back {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: -1;
-			filter: blur(2px);
+		align-items: flex-end;
+
+
+		.hover-change {
+			position: relative;
+			height: 200px;
+			width: 200px;
+
+			img.pdp {
+				height: 200px;
+				width: 200px;
+				border-radius: 50%;
+				object-fit: cover;
+			}
+
+			.change-pdp {
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 200px;
+				width: 200px;
+
+				display: none;
+
+				input {
+					display: none;
+				}
+
+				label {
+					img {
+						height: 50px;
+						width: 50px;
+						border-radius: 50%;
+						object-fit: cover;
+						filter: invert(100%);
+						position: absolute;
+						cursor: pointer;
+						transform: translate(-50%, -50%);
+					}
+				}
+			}
+			&:hover {
+				.change-pdp {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+			}
+
+			&:has(.change-pdp){
+
+				&:hover {
+					img.pdp {
+						filter: brightness(0.5);
+					}
+				}
+			}
 		}
+
+
 		p {
 			color: white;
 		}
