--- a/frontend/src/app/utility/components/song/song.component.scss
+++ b/frontend/src/app/utility/components/song/song.component.scss
@@ -142,3 +142,18 @@
     
 }
 
+
+
+@media screen and (max-width: 800px) {
+    .track-details {
+        .play-or-index {
+            .index {
+                visibility: hidden;
+            }
+            .play {
+                visibility: visible;
+                transform: translate(-20%, 0);
+            }
+        }
+    }
+}
