--- a/frontend/src/app/album-page/components/album-page/album-page.component.scss
+++ b/frontend/src/app/album-page/components/album-page/album-page.component.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.song-page {
+.album-page {
 
     position: relative;
     display: grid;
@@ -27,7 +27,7 @@
         }
     }
 
-    .song-header {
+    .album-header {
         grid-area: header;
         display: flex;
         flex-direction: row;
@@ -72,7 +72,7 @@
             }
         }
     }
-    .more-of-song {
+    .more-of-album {
         grid-area: more;
 
         .btn-delete {
@@ -153,8 +153,8 @@
 }
 
 @media only screen and (max-width: 800px) {
-    .song-page {
-        .song-header {
+    .album-page {
+        .album-header {
             align-items: flex-start;
         }
     }
