Refactor: Improved code lisibility

--- a/frontend/src/app/modules/pages/artist-page/components/artist-page/artist-page.component.scss
+++ b/frontend/src/app/modules/pages/artist-page/components/artist-page/artist-page.component.scss
@@ -10,10 +10,8 @@
 	grid-template-rows: 0.2fr auto;
 	height: 100%;
 
-
-
 	.artist-infos {
-		margin-top: 200px;
+		margin-top: 7vh;
 		display: flex;
 		flex-direction: row;
 		padding: 10px;
