--- a/frontend/src/app/modules/pages/home-page/home-page/home-page.component.scss
+++ b/frontend/src/app/modules/pages/home-page/home-page/home-page.component.scss
@@ -27,7 +27,7 @@
 			overflow-x: auto;
 			display: flex;
 			flex-direction: row;
-			justify-content: space-between;
+			justify-content: flex-start;
 			gap: 10px;
 		}
 
